# pixels-n-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: LTO.cmake  Sanitizers.cmake  Warnings.cmake
src/: CMakeLists.txt  main.cpp
